apps/tropical-management/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tropical-management

spec:
  ingressClassName: nginx
  rules:
  - host: internal-management.tropical.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tropical-web
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: tropical-api-gateway
            port:
              number: 8080
